# kakumi-app

./: .gitignore  AGENTS.md  pyproject.toml  requirements.txt  rxconfig.py  specs.md  test_file.py
alembic/versions/: 4b98b66a3e28_añadido_modelo_match.py  55348386db7b_created_referee_module.py  5e8a0525f69e_.py  be08d982ef4f_.py
docs/diagrams/: Entidad-Relación.drawio
kakumi_app/: kakumi_app.py  states.py
kakumi_app/components/: registries_items.py  registry_tables.py  sidebar.py  tables.py  timer.py
kakumi_app/models/: athlete_model.py  referee_model.py  tournament_model.py
kakumi_app/pages/: exhibition.py  registries.py  tournament.py
kakumi_app/styles/: animations.css
